create .app with smaller runtime